--- a/client/package.json
+++ b/client/package.json
@@ -6,27 +6,37 @@
   "scripts": {
     "dev": "vite --host 0.0.0.0",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node server/index.js"
   },
   "dependencies": {
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.4",
     "@react-three/drei": "^9.58.5",
     "@react-three/fiber": "^8.12.0",
     "@tabler/icons-react": "^3.35.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
     "framer-motion": "^10.9.4",
     "lucide-react": "^0.554.0",
     "maath": "^0.5.3",
     "motion": "^12.23.24",
+    "nodemailer": "^7.0.10",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
+    "react-day-picker": "^9.11.2",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.150.1",
     "three-stdlib": "^2.36.1",
-    "valtio": "^1.10.3"
+    "valtio": "^1.10.3",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
